Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-8984

Can't install ReactOS

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.0
    • Setup
    • None
    • Virtual Box
      revision 65899

    • 65,899

    Description

      Ever since revision 65899 which changed the layout of the setup, I can't install ReactOS. After I hit enter when it ask which folder to install to, it enter the debugger. Debug log:

      (ntoskrnl/io/iomgr/file.c:551) Using IopParseDevice() hack. Requested invalid at tributes: 1
      (ntoskrnl/io/iomgr/file.c:551) Using IopParseDevice() hack. Requested invalid at tributes: 1

      Entered debugger on first-chance exception (Exception Code: 0xc0000005) (Page Fault)
      Memory at 0x00000000 could not be read: Page not present.
      kdb:>

      Attachments

        Issue Links

          Activity

            People

              bug zilla Bug Zilla
              Pi_User5 Pi_User5
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: