[USETUP] InstallDirectoryPage1: Initialize DestinationRootPath. ReactOS can be installed on an existing partition again. CORE-8984 #resolve

svn path=/trunk/; revision=65913